<resources>
    <string name="app_name">Toshi</string>
    <string name="eth_currency_code">ETH</string>
    <string name="dollar">$</string>
    <string name="tab_wallet">Wallet</string>
    <string name="tab_dapps">Ðapps</string>
    <string name="tab_4">Favorites</string>
    <string name="tab_5">Settings</string>
    <string name="send_message">Message…</string>
    <string name="message">Message</string>
    <string name="chat__empty_state">There are no messages, yet!</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_about">About</string>
    <string name="profile_location">Location</string>
    <string name="profile_name">Display Name</string>
    <string name="error__required">This is required</string>
    <string name="error__invalid_characters">Invalid characters. No spaces allowed.</string>
    <string name="button_pay">Pay</string>
    <string name="button_request">Request</string>
    <string name="button_decline">Decline</string>
    <string name="button_accept">Accept</string>
    <string name="eth_amount">%1$s ETH</string>
    <string name="error__message_failed">Message did not send</string>
    <string name="balance">Balance</string>
    <string name="pay">Pay</string>
    <string name="request">Request</string>
    <string name="scan_qr">Scan QR</string>
    <string name="eth_balance">%1$s ETH</string>
    <string name="continue_">Continue</string>
    <string name="send">Send</string>
    <string name="error__message_pending">Pending</string>
    <string name="version">Version</string>
    <string name="search_or_type_the_url">Search or type the url</string>
    <string name="tab_chats">Chats</string>
    <string name="send_amount">%1$s %2$s</string>
    <string name="button_send_amount">%1$s</string>
    <string name="to">To:</string>
    <string name="reputation">Reputation</string>
    <string name="profile_username">Username</string>
    <string name="open_source_licenses">Legal</string>
    <string name="about__licenses">Open Source Licenses</string>
    <string name="error__app_loading">There was a problem loading this app</string>
    <string name="your_account_is_at_risk">Your account is at risk</string>
    <string name="security">Security</string>
    <string name="choose_trusted_friends">Choose trusted friends</string>
    <string name="store_backup_phrase">Store passphrase</string>
    <string name="trusted_friends">Trusted friends</string>
    <string name="coming_soon">Coming soon</string>
    <string name="coming_soon_message">Your friends will be able to identify you when you lose your phone or need to sign in on a new device. Make sure to get your friends on Toshi.</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_friends_intent_message">I’m using Toshi to access an open financial system. Join me: http://www.toshi.org/</string>
    <string name="let_s_secure_your_account">Let’s secure your account</string>
    <string name="backup_phrase_info_message">Storing a passphrase will allow you to recover your funds if your phone is ever lost or stolen.\n\nIt’s important to store this passphrase securely where nobody else can access it, such as on a piece of paper or in a password manager.</string>
    <string name="backup_phrase_understand_message">I understand that if I lose my passphrase, I will be unable to recover access to my account.</string>
    <string name="backup_phrase">Passphrase</string>
    <string name="this_is_your_backup_phrase">This is your passphrase</string>
    <string name="backup_phrase_warning_message">Carefully write down the words. Don’t email it or screenshot it. </string>
    <string name="copy_phrase_to_clipboard">Copy phrase to Clipboard</string>
    <string name="verify_phrase">Verify phrase</string>
    <string name="verify">Verify</string>
    <string name="verify_backup_phrase_message">Tap or drag the words to put them next to each other in the correct order.</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="screenshot_warning_title">Screenshots are not secure</string>
    <string name="screenshot_warning_message">If you take a screenshot, your backup may be viewed by other apps</string>
    <string name="got_it">Got it</string>
    <string name="error__web_signin">It was not possible to complete sign in.</string>
    <string name="web_signin">Sign in successful</string>
    <string name="send_money">Send</string>
    <string name="deposit_money">Deposit</string>
    <string name="add_money_to_wallet">Add Money To My Wallet</string>
    <string name="deposit_info_message">You can add money to your account in a variety of ways</string>
    <string name="eth_deposit_method_1">1. Send ethereum from another wallet</string>
    <string name="eth_deposit_method_1_message">Send to this address to top up your wallet:</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="eth_deposit_method_2">2. Find a local exchanger</string>
    <string name="eth_deposit_method_2_message">Find a local exchanger of ethereum in your country. You can give them cash and they will send you ethereum</string>
    <string name="eth_deposit_method_3">3. Earn money</string>
    <string name="eth_deposit_method_3_message">Install an app that lets you earn ethereum</string>
    <string name="eth_deposit_method_4">4. Request money from a friend</string>
    <string name="eth_deposit_method_4_message">Send a payment request to a friend who can help</string>
    <string name="confirm_payment_to">Confirm payment to</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="local_amount">Send %1$s</string>
    <string name="rate">Rate</string>
    <string name="error_unknown_user">Unable to find user at this address</string>
    <string name="error_unknown_group">Unable to show group info</string>
    <string name="latest_message__payment_outgoing">You paid %1$s</string>
    <string name="latest_message__payment_incoming">Received %1$s</string>
    <string name="latest_message__request_failed">Payment request failed</string>
    <string name="latest_message__payment_failed">Payment failed</string>
    <string name="latest_message__payment_request_outgoing">You requested %1$s</string>
    <string name="latest_message__payment_request_denied">You denied request for %1$s</string>
    <string name="latest_message__payment_request_accepted">You approved request for %1$s</string>
    <string name="latest_message__payment_request">Request for %1$s</string>
    <string name="latest_sent_attachment">You sent an attachment</string>
    <string name="latest_received_attachment">You received an attachment</string>
    <string name="payment_failed_message">Unable to send money to %1$s</string>
    <string name="username_search_response_no_match">No user found with this username</string>
    <string name="parentheses">(%1$d)</string>
    <string name="write_a_review_optional">Write a review (optional)</string>
    <string name="rate_this_user">Rate user</string>
    <string name="rate_bot">Rate bot</string>
    <string name="no_thanks">No thanks</string>
    <string name="search_people">Search people</string>
    <string name="select_picture">Select Picture</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_from_library">Pick from library</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="profile_image_success">Profile photo successfully set</string>
    <string name="profile_image_error">Could not upload photo</string>
    <string name="error__offline">No internet connection</string>
    <string name="profile__unknown_name">No username set</string>
    <string name="unknown_sender">Unknown Sender</string>
    <string name="payment_seperator" translatable="false"> · </string>
    <string name="sign_out_warning_title">Have you recorded your passphrase?</string>
    <string name="sign_out_warning_message">Without this you will not be able to sign back in to your account.</string>
    <string name="sign_out_cancelled_title">Sign out cancelled</string>
    <string name="sign_out_cancelled_message">You need to complete at least one of the security steps before you sign out.</string>
    <string name="sign_out_confirmation_title">Are you sure you want to sign out?</string>
    <string name="beta_warning_title">Be aware!</string>
    <string name="init_warning_message">Toshi is not an appropriate wallet for storage of large sums of ETH.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_alert_message">This is your 12 word phrase, separated by spaces</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scan_qr_to_sign_in">Scan QR to sign in</string>
    <string name="unable_to_restore_wallet">Unable to restore wallet</string>
    <string name="unable_to_create_wallet">Unable to create wallet</string>
    <string name="sign_in_length_error_message">Please insert 12 words</string>
    <string name="favorite">Favorite</string>
    <string name="profile_qr_code">My QR Code</string>
    <string name="payment_to">to</string>
    <string name="payment_from">from</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="payment_address">Payment address</string>
    <string name="invalid_payment">Invalid payment</string>
    <string name="payment_address_with_value">Payment address: %1$s</string>
    <string name="copied_payment_address_to_clipboard">Copied %1$s to clipboard</string>
    <string name="error__dapp_loading">Unable to launch web app</string>
    <string name="move_and_scale">Move and scale</string>
    <string name="crop_error">Unable to crop the image. Please try again</string>
    <string name="confirm_image">Confirm image</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="report">Report</string>
    <string name="dismiss">Dismiss</string>
    <string name="block_user_dialog_title">Block username</string>
    <string name="block_user_dialog_message">They won\'t be able to find your profile, or message you on Toshi. Users won\'t know that you\'ve blocked them.</string>
    <string name="unblock_user_dialog_title">Unblock username</string>
    <string name="unblock_user_dialog_message">They will be able to find your profile and message you on Toshi. Users won\'t know that you\'ve blocked them.</string>
    <string name="block_user_confirmation_dialog_title">Username blocked</string>
    <string name="block_user_confirmation_dialog_message">You can unblock them any time from their profile</string>
    <string name="unblock_user_confirmation_dialog_title">Username unblocked</string>
    <string name="unblock_user_confirmation_dialog_message">You can block them any time from their profile</string>
    <string name="advanced_title">Advanced</string>
    <string name="network">Network</string>
    <string name="develop_message">Changing the network allows you to test developed apps without the risk of losing money. It’s recommended not to change these settings unless you are a developer.</string>
    <string name="terms_dialog_title">Accept Terms</string>
    <string name="terms_dialog_message">By creating an account, you agree to the Toshi <a href="https://www.toshi.org/terms-of-service/">Terms of Service</a> and <a href="https://www.toshi.org/privacy-policy/">Privacy Policy</a></string>
    <string name="agree">Agree</string>
</resources>