<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ 	Copyright (c) 2017. Toshi Inc
  ~
  ~ 	This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            style="@style/Toolbar">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:tint="@color/textColorContrast"
                app:srcCompat="@drawable/ic_arrow_back"
                style="@style/closeButtonStyle"/>

            <android.support.v4.widget.Space
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Toolbar.TitleText"
                android:text="@string/deposit_money"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="35dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="24sp"
                        android:text="@string/add_money_to_wallet"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="13dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/deposit_info_message"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="30dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:background="@color/divider"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        style="@style/contentSubTitleStyle"
                        android:text="@string/eth_deposit_method_1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/eth_deposit_method_1_message"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="9dp" />

                    <TextView
                        android:id="@+id/owner_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        android:textColor="@color/textColorPrimary"
                        tools:text="0x20302385903825982853"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:id="@+id/copy_to_clipboard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="?android:selectableItemBackground"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"
                        style="@style/TextStyleMedium"
                        android:text="@string/copy_to_clipboard"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="29dp" />

                    <ImageView
                        android:id="@+id/qr_code"
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center_horizontal"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="30sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:background="@color/divider"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        style="@style/contentSubTitleStyle"
                        android:text="@string/eth_deposit_method_2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/eth_deposit_method_2_message"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="30sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:background="@color/divider"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        style="@style/contentSubTitleStyle"
                        android:text="@string/eth_deposit_method_3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/eth_deposit_method_3_message"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="30sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:background="@color/divider"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        style="@style/contentSubTitleStyle"
                        android:text="@string/eth_deposit_method_4"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/eth_deposit_method_4_message" />

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="30dp" />

                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/network"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="bottom"
                android:visibility="gone"
                android:gravity="center"
                android:background="@color/file_avatar_background"
                style="@style/TextStyleMedium"
                android:textSize="14sp"
                android:textColor="@color/textColorContrast"
                tools:text="Active network: Mainnet"
                tools:visibility="visible"/>
        </FrameLayout>
    </LinearLayout>
</layout>