<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ 	Copyright (c) 2017. Toshi Inc
  ~
  ~ 	This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:minWidth="500dp"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="@dimen/space_unused_dimension"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_one_and_a_half"
        android:layout_marginRight="@dimen/margin_one_and_a_half"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/textColorPrimary"
        style="@style/TextStyleMedium"
        android:text="@string/terms_dialog_title"/>

    <android.support.v4.widget.Space
        android:layout_width="@dimen/space_unused_dimension"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_one_and_a_half"
        android:layout_marginRight="@dimen/margin_one_and_a_half"
        android:textSize="@dimen/text_size_subtitle"
        android:textColor="@color/textColorSecondaryTransparent"
        android:textColorLink="@color/textColorSecondaryTransparent"
        android:text="@string/terms_dialog_message"
        tools:text="Message body"/>

    <android.support.v4.widget.Space
        android:layout_width="@dimen/space_unused_dimension"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|right"
        android:paddingRight="8dp"
        android:paddingLeft="8dp">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:text="@string/cancel"
            style="?attr/buttonBarButtonStyle"/>

        <android.support.v4.widget.Space
            android:layout_width="5dp"
            android:layout_height="@dimen/space_unused_dimension" />

        <TextView
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:text="@string/agree"
            style="?attr/buttonBarButtonStyle" />

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="@dimen/space_unused_dimension"
        android:layout_height="8dp" />

</LinearLayout>
