<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ 	Copyright (c) 2017. Toshi Inc
  ~
  ~ 	This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                style="@style/Toolbar">

                <ImageButton
                    android:id="@+id/close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_arrow_back"
                    android:tint="@color/textColorContrast"
                    android:padding="16dp" />

                <android.support.v4.widget.Space
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Toolbar.TitleText"
                    android:text="@string/advanced_title"/>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorSecondary"
                android:text="@string/network"/>

            <TextView
                android:id="@+id/current_network"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:background="?android:selectableItemBackground"
                tools:text="Ropsten Revival Testnet"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/divider"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="14sp"
                android:textColor="@color/textColorBody"
                android:text="@string/develop_message"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="29dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorSecondary"
                android:text="@string/version"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:background="@color/windowBackground"
                android:textSize="16sp"
                tools:text="VersionName"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorSecondary"
                android:text="@string/open_source_licenses"/>

            <TextView
                android:id="@+id/open_source_licenses"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:background="?android:selectableItemBackground"
                android:text="@string/about__licenses" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/loading_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/semi_transparent_overlay">

            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>

        </FrameLayout>
    </FrameLayout>

</layout>